small fix for horizontal scroll

--- a/src/page/eachvideo/video.module.css
+++ b/src/page/eachvideo/video.module.css
@@ -30,7 +30,6 @@
 }
 @media only screen and (max-width: 768px) {
   .iframe {
-    margin-left: 1rem;
-    width: 100%;
+    width: 100vw;
   }
 }
