--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -47,5 +47,6 @@
   .cardContainer,
   .videoCardLink {
     justify-content: center;
+    margin-left: 0;
   }
 }
